<resources>
    <string name="app_name">MobAppsProjectSebastianGode</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="getContactList">Get Contact List</string>
    <string name="alertContact">This App needs access to access your Contacts, please allow it in
        the following dialog.</string>
    <string name="alertContactWrite">In order to save the contact this app needs Write permissions
        for your contacts.</string>
    <string name="ok">OK</string>
    <string name="notice">Notice</string>
    <string name="person">Person</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="save">Save as file</string>
    <string name="retrieve">Retrieve Json</string>
    <string name="exportMessage">The following JSON will be written to the file: %1$s</string>
    <string name="errorContactSelection">No Contact Selected on Home Screen!</string>
    <string name="readFile">Read File</string>
    <string name="importFile">Import File</string>
    <string name="exportTutorial">Click the button below to get a preview of what gets written to
        the export file!</string>
    <string name="exportSaveTutorial">This button will save the JSON to the file under
        /storage/emulated/0/Android/data/com.example.mobappsprojectsebastiangode/files/Download/contacts</string>
    <string name="importReadTutorial">Click the button below to get a preview of the file contents
        from
        /storage/emulated/0/Android/data/com.example.mobappsprojectsebastiangode/files/Download/contacts
    </string>
    <string name="importSave">Press here to import the contact!</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="export">Export</string>
    <string name="importString">Import</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="notImplemented">This is not yet implemented!</string>
    <string name="editTutorialRead">Click the button below to start editing the selected
        contact!</string>
    <string name="editContact">Edit selected Contact</string>
    <string name="editContactSave">Save the Contact</string>
    <string name="editPhoneNumber">Phone Number:</string>
    <string name="editNameText">Name: %1$s</string>
    <string name="noContactSelected">No contact selected!</string>
    <string name="malformedInputFile">Malformed input file!</string>
    <string name="NavHeader">Mobile Applikationen App</string>
    <string name="contactUpdateSuccessful">Contact successfully updated!</string>
</resources>